--- a/frontend/src/app/component/products/products.component.html
+++ b/frontend/src/app/component/products/products.component.html
@@ -1,21 +1,16 @@
-<p>products works!</p>
-<table class="table table-dark table-striped">
-  <thead class="thread-dark">
-    <tr>
-      <th></th>
-      <th>Name</th>
-      <th>Price</th>
-      <th>Units In Stock</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let item of products">
-      <td class="align-middle">
-        <img src="{{item.imageUrl}}" height="50">
-      </td>
-      <td class="align-middle">{{item.name}}</td>
-      <td class="align-middle">{{item.unitPrice | currency: 'USD'}}</td>
-      <td class="align-middle">{{item.unitsInStock}}</td>
-    </tr>
-  </tbody>
-</table>
+<div class="main-content">
+  <div class="section-content section-content-p30">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-3" *ngFor="let item of products">
+          <div class="product-box">
+            <img src="{{item.imageUrl}}" class="img-responsive">
+            <h1>{{item.name}}</h1>
+            <div class="price">{{item.unitPrice | currency: 'USD'}}</div>
+            <a href="#" class="primary-btn">{{item.unitsInStock}}</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
