--- a/frontend/src/app/component/products/products.component.html
+++ b/frontend/src/app/component/products/products.component.html
@@ -7,7 +7,7 @@
             <img src="{{item.imageUrl}}" class="img-responsive">
             <h1>{{item.name}}</h1>
             <div class="price">{{item.unitPrice | currency: 'USD'}}</div>
-            <a href="#" class="primary-btn">{{item.unitsInStock}}</a>
+            <a href="#" class="primary-btn">Add to Card</a>
           </div>
         </div>
       </div>
