--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -36,7 +36,7 @@
     <!-- END HEADER DESKTOP-->
 
     <!-- MAIN CONTENT-->
-    <app-products></app-products>
+    <router-outlet></router-outlet>
 
   </div>
 </div>
