--- a/frontend/src/app/component/search/search.component.html
+++ b/frontend/src/app/component/search/search.component.html
@@ -1,5 +1,5 @@
 <form class="form-header" onsubmit="return false;" method="GET">
-  <input #keyword class="au-input au-input-xl" type="text" name="search" placeholder="Search for data ..." />
+  <input #keyword (keyup)="onSearch(keyword.value)" class="au-input au-input-xl" type="text" name="search" placeholder="Search for data ..." />
   <button (click)="onSearch(keyword.value)" class="au-btn-submit" type="submit">
     Search
   </button>
