--- a/frontend/src/app/component/product-details/product-details.component.html
+++ b/frontend/src/app/component/product-details/product-details.component.html
@@ -1,16 +1,16 @@
 <div class="detail-section">
   <div class="container-fluid">
 
-    <img src="" class="detail-img">
+    <img src="{{product?.imageUrl}}" class="detail-img">
 
-    <h3></h3>
-    <div class="price"></div>
+    <h3>{{product?.name}}</h3>
+    <div class="price">{{product?.unitPrice}}</div>
     <button class="btn btn-primary btn-sm">Add to cart</button>
 
     <hr>
     <h4>Description</h4>
-    <p></p>
+    <p>{{product?.description}}</p>
 
-    <a class="mt-5">Back to Product List</a>
+    <a routerLink="/products" class="mt-5">Back to Product List</a>
   </div>
 </div>
