--- a/frontend/src/app/component/products/products.component.html
+++ b/frontend/src/app/component/products/products.component.html
@@ -4,8 +4,12 @@
       <div class="row">
         <div class="col-md-3" *ngFor="let item of products">
           <div class="product-box">
-            <img src="{{item.imageUrl}}" class="img-responsive">
-            <h1>{{item.name}}</h1>
+            <a routerLink="/product/{{item.id}}">
+              <img src="{{item.imageUrl}}" class="img-responsive">
+            </a>
+            <a routerLink="/product/{{item.id}}">
+              <h1>{{item.name}}</h1>
+            </a>
             <div class="price">{{item.unitPrice | currency: 'USD'}}</div>
             <a href="#" class="primary-btn">Add to Card</a>
           </div>
