--- a/frontend/src/app/component/products/products.component.html
+++ b/frontend/src/app/component/products/products.component.html
@@ -20,5 +20,14 @@
         </div>
       </div>
     </div>
+
+    <div class="col-md-8">
+      <div class="row">
+        <div class="col-md-9" style="padding-left: 30%">
+          <ngb-pagination [(page)]="page" [pageSize]="size" [collectionSize]="numElement" (pageChange)="done()">
+          </ngb-pagination>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
