--- a/frontend/src/app/component/products/products.component.html
+++ b/frontend/src/app/component/products/products.component.html
@@ -28,6 +28,17 @@
           </ngb-pagination>
         </div>
       </div>
+
+      <div class="col-md-3 mt-2" style="text-align: right">
+        <span class="mr-2">Page size</span>
+        <select (change)="editPageSize($event)">
+          <option>2</option>
+          <option>5</option>
+          <option selected>10</option>
+          <option>20</option>
+          <option>50</option>
+        </select>
+      </div>
     </div>
   </div>
 </div>
