--- a/frontend/src/app/component/products/products.component.html
+++ b/frontend/src/app/component/products/products.component.html
@@ -24,20 +24,19 @@
     <div class="col-md-12">
       <div class="row">
         <div class="col-md-10" style="padding-left: 30%">
-          <ngb-pagination [(page)]="page" [pageSize]="size" [collectionSize]="numElement" (pageChange)="done()">
+          <ngb-pagination [(page)]="page" [pageSize]="size" [collectionSize]="numElement" [maxSize]="5" [boundaryLinks]="true" (pageChange)="done()">
           </ngb-pagination>
         </div>
-      </div>
-
-      <div class="col-md-3 mt-2" style="text-align: right">
-        <span class="mr-2">Page size</span>
-        <select (change)="editPageSize($event)">
-          <option>2</option>
-          <option>5</option>
-          <option selected>10</option>
-          <option>20</option>
-          <option>50</option>
-        </select>
+        <div class="col-md-3 mt-2 select" style="text-align: right">
+          <span class="mr-2">Page size</span>
+          <select (change)="editPageSize($event)">
+            <option>2</option>
+            <option>5</option>
+            <option selected>10</option>
+            <option>20</option>
+            <option>50</option>
+          </select>
+        </div>
       </div>
     </div>
   </div>
