--- a/frontend/src/app/component/products/products.component.html
+++ b/frontend/src/app/component/products/products.component.html
@@ -11,7 +11,7 @@
               <h1>{{item.name}}</h1>
             </a>
             <div class="price">{{item.unitPrice | currency: 'USD'}}</div>
-            <a href="#" class="primary-btn">Add to Card</a>
+            <a href="javascript: void(0)" (click)="addToCart(item)" class="primary-btn">Add to Card</a>
           </div>
         </div>
         <!-- if products empty then display a message -->
