--- a/frontend/src/app/component/cart-details/cart-details.component.html
+++ b/frontend/src/app/component/cart-details/cart-details.component.html
@@ -9,29 +9,29 @@
           <th width="30%"></th>
         </tr>
 
-        <tr>
+        <tr *ngFor="let item of cartItems">
           <td>
-            <img src="" class="img-responsive" width="150px"/>
+            <img src="{{item.imageUrl}}" class="img-responsive" width="150px"/>
           </td>
           <td>
-            <p>name</p>
-            <p>unitPrice</p>
+            <p>{{item.name}}</p>
+            <p>{{item.unitPrice | currency: 'USD'}}</p>
           </td>
           <td>
             <div class="items">
-              <label>Quantity:</label>
+              <label>Quantity: {{item.quantity}}</label>
             </div>
 
-            <p class="mt-2">Subtotal: </p>
+            <p class="mt-2">Subtotal: {{(item.quantity * item.unitPrice) | currency:'USD'}}</p>
           </td>
         </tr>
 
         <tr>
           <td colspan="2"></td>
           <td style="font-weight: bold">
-            <p>Total Quantity: </p>
+            <p>Total Quantity: {{total}}</p>
             <p>Shipping: FREE</p>
-            <p>Total Price: </p>
+            <p>Total Price: {{price | currency:'USD'}}</p>
           </td>
         </tr>
 
