--- a/frontend/src/app/component/cart-details/cart-details.component.html
+++ b/frontend/src/app/component/cart-details/cart-details.component.html
@@ -1,42 +1,46 @@
 <div class="main-content">
   <div class="section-content section-content-p30">
     <div class="container-fluid">
+      <div *ngIf="cartItems?.length">
+        <table class="table table-bordered">
+          <tr>
+            <th width="20%">Product Image</th>
+            <th width="50%">Product Detail</th>
+            <th width="30%"></th>
+          </tr>
 
-      <table class="table table-bordered">
-        <tr>
-          <th width="20%">Product Image</th>
-          <th width="50%">Product Detail</th>
-          <th width="30%"></th>
-        </tr>
+          <tr *ngFor="let item of cartItems">
+            <td>
+              <img src="{{item.imageUrl}}" class="img-responsive" width="150px"/>
+            </td>
+            <td>
+              <p>{{item.name}}</p>
+              <p>{{item.unitPrice | currency: 'USD'}}</p>
+            </td>
+            <td>
+              <div class="items">
+                <label>Quantity: {{item.quantity}}</label>
+              </div>
 
-        <tr *ngFor="let item of cartItems">
-          <td>
-            <img src="{{item.imageUrl}}" class="img-responsive" width="150px"/>
-          </td>
-          <td>
-            <p>{{item.name}}</p>
-            <p>{{item.unitPrice | currency: 'USD'}}</p>
-          </td>
-          <td>
-            <div class="items">
-              <label>Quantity: {{item.quantity}}</label>
-            </div>
+              <p class="mt-2">Subtotal: {{(item.quantity * item.unitPrice) | currency:'USD'}}</p>
+            </td>
+          </tr>
 
-            <p class="mt-2">Subtotal: {{(item.quantity * item.unitPrice) | currency:'USD'}}</p>
-          </td>
-        </tr>
+          <tr>
+            <td colspan="2"></td>
+            <td style="font-weight: bold">
+              <p>Total Quantity: {{total}}</p>
+              <p>Shipping: FREE</p>
+              <p>Total Price: {{price | currency:'USD'}}</p>
+            </td>
+          </tr>
 
-        <tr>
-          <td colspan="2"></td>
-          <td style="font-weight: bold">
-            <p>Total Quantity: {{total}}</p>
-            <p>Shipping: FREE</p>
-            <p>Total Price: {{price | currency:'USD'}}</p>
-          </td>
-        </tr>
-
-      </table>
-
+        </table>
+      </div>
+    </div>
+    <!-- if products empty then display a message -->
+    <div *ngIf="cartItems?.length == 0" class="alert alert-warning col-md-12" role="alert">
+      Your shopping cart is empty.
     </div>
   </div>
 </div>
