FE: add remove item in cart

--- a/frontend/src/app/component/cart-details/cart-details.component.html
+++ b/frontend/src/app/component/cart-details/cart-details.component.html
@@ -19,7 +19,28 @@
             </td>
             <td>
               <div class="items">
-                <label>Quantity: {{item.quantity}}</label>
+                <label>Quantity:</label>
+
+                <div style="display: flex">
+                  <div class="col">
+                    <button (click)="addItem(item)" class="btn btn-primary btn-sm">
+                      <i class="fas fa-plus">+</i>
+                    </button>
+                  </div>
+
+                  <div class="col ml-4 mr-2">
+                    {{ item.quantity }}
+                  </div>
+
+                  <div class="col">
+                    <button (click)="removeItem(item)" class="btn btn-primary btn-sm">
+                      <i class="fas fa-minus">-</i>
+                    </button>
+                  </div>
+
+                  <div class="col-8"></div>
+                </div>
+
               </div>
 
               <p class="mt-2">Subtotal: {{(item.quantity * item.unitPrice) | currency:'USD'}}</p>
