FE: add remove all items in cart

--- a/frontend/src/app/component/cart-details/cart-details.component.html
+++ b/frontend/src/app/component/cart-details/cart-details.component.html
@@ -43,6 +43,8 @@
 
               </div>
 
+              <div class="col"><button (click)="removeAllItems(item)" class="btn btn-primary btn-sm">Remove</button></div>
+
               <p class="mt-2">Subtotal: {{(item.quantity * item.unitPrice) | currency:'USD'}}</p>
             </td>
           </tr>
