--- a/frontend/src/app/component/cart-details/cart-details.component.html
+++ b/frontend/src/app/component/cart-details/cart-details.component.html
@@ -55,6 +55,7 @@
               <p>Total Quantity: {{total}}</p>
               <p>Shipping: FREE</p>
               <p>Total Price: {{price | currency:'USD'}}</p>
+              <div><a routerLink="/checkout" class="btn btn-primary btn-sm">Checkout</a></div>
             </td>
           </tr>
 
