--- a/frontend/src/app/component/checkout/checkout.component.html
+++ b/frontend/src/app/component/checkout/checkout.component.html
@@ -2,17 +2,17 @@
   <div class="section-content section-content-p30">
     <div class="container-fluid">
 
-      <form>
+      <form [formGroup]="checkoutGroup" (ngSubmit)="onSubmit()">
 
         <!-- customer form group -->
-        <div class="form-area">
+        <div formGroupName="customer" class="form-area">
           <h3>Customer</h3>
 
           <div class="row">
             <div class="col-md-2"><label>First Name</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <input type="text">
+                <input formControlName="firstName" type="text">
               </div>
             </div>
           </div>
@@ -21,7 +21,7 @@
             <div class="col-md-2"><label>Last Name</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <input type="text">
+                <input formControlName="lastName" type="text">
               </div>
             </div>
           </div>
@@ -30,7 +30,7 @@
             <div class="col-md-2"><label>Email</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <input type="text">
+                <input formControlName="email" type="text">
               </div>
             </div>
           </div>
@@ -38,14 +38,14 @@
         </div>
 
         <!-- shipping Address -->
-        <div class="form-area">
+        <div formGroupName="shippingAddress" class="form-area">
           <h3>Shipping Address</h3>
 
           <div class="row">
             <div class="col-md-2"><label>Country</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <select>
+                <select formControlName="country">
                   <option>TO DO</option>
                 </select>
               </div>
@@ -56,7 +56,7 @@
             <div class="col-md-2"><label>Street</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <input type="text">
+                <input formControlName="street" type="text">
               </div>
             </div>
           </div>
@@ -65,7 +65,7 @@
             <div class="col-md-2"><label>City</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <input type="text">
+                <input formControlName="city" type="text">
               </div>
             </div>
           </div>
@@ -74,7 +74,7 @@
             <div class="col-md-2"><label>State</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <select>
+                <select formControlName="state">
                   <option>TO DO</option>
                 </select>
               </div>
@@ -85,23 +85,31 @@
             <div class="col-md-2"><label>Zip Code</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <input type="text">
+                <input formControlName="zipCode" type="text">
               </div>
             </div>
           </div>
 
         </div>
 
+        <!-- Add check box to copy shipping to billing -->
+        <div class="input-space">
+          <label class="au-checkbox">
+            <input type="checkbox" (change)="copyShippingToBilling($event)">
+            <span class="au-checkmark"></span>Billing Address same as Shipping Address
+          </label>
+        </div>
+
 
         <!-- Billing Address -->
-        <div class="form-area">
+        <div formGroupName="billingAddress" class="form-area">
           <h3>Billing Address</h3>
 
           <div class="row">
             <div class="col-md-2"><label>Country</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <select>
+                <select formControlName="country">
                   <option>TO DO</option>
                 </select>
               </div>
@@ -112,7 +120,7 @@
             <div class="col-md-2"><label>Street</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <input type="text">
+                <input formControlName="street" type="text">
               </div>
             </div>
           </div>
@@ -121,7 +129,7 @@
             <div class="col-md-2"><label>City</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <input type="text">
+                <input formControlName="city" type="text">
               </div>
             </div>
           </div>
@@ -130,7 +138,7 @@
             <div class="col-md-2"><label>State</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <select>
+                <select formControlName="state">
                   <option>TO DO</option>
                 </select>
               </div>
@@ -141,7 +149,7 @@
             <div class="col-md-2"><label>Zip Code</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <input type="text">
+                <input formControlName="zipCode" type="text">
               </div>
             </div>
           </div>
@@ -149,14 +157,14 @@
         </div>
 
         <!-- Credit Card -->
-        <div class="form-area">
+        <div formGroupName="creditCard" class="form-area">
           <h3>Credit Card</h3>
 
           <div class="row">
             <div class="col-md-2"><label>Card Type</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <select>
+                <select formControlName="cardType">
                   <option>Visa</option>
                   <option>Mastercard</option>
                 </select>
@@ -168,7 +176,7 @@
             <div class="col-md-2"><label>Name on Card</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <input type="text">
+                <input formControlName="nameCard" type="text">
               </div>
             </div>
           </div>
@@ -177,7 +185,7 @@
             <div class="col-md-2"><label>Card Number</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <input type="text">
+                <input formControlName="cardNumber" type="text">
               </div>
             </div>
           </div>
@@ -186,7 +194,7 @@
             <div class="col-md-2"><label>Security Code</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <input type="text">
+                <input formControlName="securityCode" type="text">
               </div>
             </div>
           </div>
@@ -195,7 +203,7 @@
             <div class="col-md-2"><label>Expiration Month</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <select>
+                <select formControlName="expirationMonth">
                   <option>TO DO</option>
                 </select>
               </div>
@@ -206,7 +214,7 @@
             <div class="col-md-2"><label>Expiration Year</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <select>
+                <select formControlName="expirationYear">
                   <option>TO DO</option>
                 </select>
               </div>
@@ -219,9 +227,9 @@
         <div class="form-area">
           <h3>Review Your Order</h3>
 
-          <p>Total Quantity: </p>
+          <p>Total Quantity: {{totalQuantity}}</p>
           <p>Shipping: FREE</p>
-          <p>Total Price: </p>
+          <p>Total Price: {{totalPrice | currency: 'USD'}}</p>
         </div>
 
         <!-- submit button-->
