--- a/frontend/src/app/component/checkout/checkout.component.html
+++ b/frontend/src/app/component/checkout/checkout.component.html
@@ -204,7 +204,7 @@
             <div class="col-md-9">
               <div class="input-space">
                 <select formControlName="expirationMonth">
-                  <option>TO DO</option>
+                  <option *ngFor="let m of creditCardMonths">{{m}}</option>
                 </select>
               </div>
             </div>
@@ -215,7 +215,7 @@
             <div class="col-md-9">
               <div class="input-space">
                 <select formControlName="expirationYear">
-                  <option>TO DO</option>
+                  <option *ngFor="let y of creditCardYears">{{y}}</option>
                 </select>
               </div>
             </div>
