--- a/frontend/src/app/component/checkout/checkout.component.html
+++ b/frontend/src/app/component/checkout/checkout.component.html
@@ -74,7 +74,7 @@
             <div class="col-md-2"><label>State</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <select formControlName="state" *ngIf="statesShipping">
+                <select formControlName="state">
                   <option *ngFor="let s of statesShipping">{{s.name}}</option>
                 </select>
               </div>
@@ -138,7 +138,7 @@
             <div class="col-md-2"><label>State</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <select formControlName="state" *ngIf="statesBilling">
+                <select formControlName="state">
                   <option *ngFor="let s of statesBilling">{{s.name}}</option>
                 </select>
               </div>
