FE: add validator

--- a/frontend/src/app/component/checkout/checkout.component.html
+++ b/frontend/src/app/component/checkout/checkout.component.html
@@ -13,6 +13,10 @@
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="firstName" type="text">
+                <div *ngIf="fName?.invalid && (fName?.dirty || fName?.touched)" class="stu">
+                  <div *ngIf="fName.errors.required" class="alert alert-danger">First Name is required.</div>
+                  <div *ngIf="fName.errors.minlength" class="alert alert-danger">First Name must be at least 5 char long.</div>
+                </div>
               </div>
             </div>
           </div>
@@ -22,6 +26,10 @@
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="lastName" type="text">
+                <div *ngIf="lName?.invalid && (lName?.dirty || lName?.touched)" class="stu">
+                  <div *ngIf="lName.errors.required" class="alert alert-danger">Last Name is required.</div>
+                  <div *ngIf="lName.errors.minlength" class="alert alert-danger">Last Name must be at least 5 char long.</div>
+                </div>
               </div>
             </div>
           </div>
@@ -31,6 +39,10 @@
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="email" type="text">
+                <div *ngIf="email?.invalid && (email?.dirty || email?.touched)" class="stu">
+                  <div *ngIf="email.errors.required" class="alert alert-danger">Email is required.</div>
+                  <div *ngIf="email.errors.pattern" class="alert alert-danger">Email must be a valid email format.</div>
+                </div>
               </div>
             </div>
           </div>
